--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <div id="react-root">
     <script src="/build/bundle.js"></script>
 
- <nav class="navbar">
+ <!-- <nav class="navbar">
     <a href="/" class="navbar-brand">Chatty</a>
-  </nav>
+    <div class="userCount">
+    </div>
+  </nav> -->
   <!-- <div class="messageList">
 
     <div class="messages"></div>
